# soir

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.org  TODO.org  docker-compose.yml  install.sh  justfile  poetry.toml  pyproject.toml  setup.py  soir.spec  vcpkg.json
neon/: CMakeLists.txt  Makefile  README.md
neon/docs/: architecture.mmd
neon/etc/: standalone.yaml
neon/live/: live.py
neon/src/: main.cc
neon/src/agent/: CMakeLists.txt  agent.hh  controller_watcher.cc  file_watcher.cc  file_watcher.hh  subscriber.cc  subscriber.hh
neon/src/core/: CMakeLists.txt  neon.cc  neon.hh
neon/src/proto/: CMakeLists.txt  neon.proto
neon/src/utils/: CMakeLists.txt  config.cc  config.hh  config_test.cc  misc.cc  signal.cc
nocturne/: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  justfile  pyproject.toml  setup.py
nocturne/cpp/audio/: audio_output.cc  audio_output.hh
nocturne/cpp/bindings/: bind.hh  bindings.cc  logger.cc  rt.cc  rt.hh  soir.cc
nocturne/cpp/core/: adsr.cc  adsr.hh  common.hh  controls.cc  controls.hh  engine.cc  engine.hh  level_meter.cc  midi_sysex.hh  sample_manager.cc  sample_pack.cc  sample_pack.hh  soir.cc  track.cc  track.hh
nocturne/cpp/dsp/: band_pass_filter.cc  biquad_filter.cc  high_shelving_filter.cc  lfo.cc  low_pass_filter.cc  low_shelving_filter.hh  lpf.cc  lpf.hh  reverb.cc  tools.hh
nocturne/cpp/fx/: fx.hh  fx_chorus.cc  fx_echo.hh  fx_reverb.cc  fx_stack.cc  fx_stack.hh  fx_vst.hh
nocturne/cpp/inst/: external.cc  external.hh  midi_ext.cc  midi_ext.hh  sampler.cc
nocturne/cpp/rt/: runtime.cc  runtime.hh
nocturne/cpp/utils/: fast_random.hh  logger.cc
nocturne/cpp/vst/: vst_editor_macos.mm  vst_host.cc  vst_host.hh  vst_scanner.cc
nocturne/etc/: config.default.json  live.default.py
nocturne/playground/0x01/: live.py
nocturne/py/soir/: __init__.py  app.py  watcher.py
nocturne/py/tests/: test_watcher.py
nocturne/python/soir/: __init__.py  app.py  cli.py  watcher.py
nocturne/python/tests/: test_config.py  test_www.py
nocturne/soir/: __init__.py  cli.py  config.py
nocturne/soir/www/: app.py
nocturne/src/: bindings.cc  core.cc  core.hh
nocturne/src/bindings/: bind.hh  bindings.cc  soir.cc  start.cc
nocturne/src/core/: soir.cc  soir.hh
nocturne/src/utils/: config.cc  config.hh
nocturne/tests/: test_config.py  test_www.py
nocturne/tests/utils/: config_test.cc
proto/: CMakeLists.txt
soir/src/: .gitignore  CMakeLists.txt  Config.cpp  Config.hh  ConfigParser.cpp  ConfigParser.hh  Constants.hh  IFaces.hh  LiquidPusher.cpp  LiquidPusher.hh  Maethstro.cpp  Maethstro.hh  Main.cpp  NetworkService.cpp  NetworkService.hh  Renderer.cpp  Renderer.hh  SamplerPlugin.cpp  SamplerPlugin.hh  Shouter.cpp  Shouter.hh  Status.cpp  Status.hh  Track.cpp  Track.hh  Utils.cpp  Utils.hh  VorbisWriter.cpp  VorbisWriter.hh  Vst3Plugin.cpp  Vst3Plugin.hh
src/agent/: CMakeLists.txt  agent.cc  agent.hh  controller_watcher.cc  controller_watcher.hh  file_watcher.cc  file_watcher.hh  subscriber.cc  subscriber.hh
src/common/: CMakeLists.txt  config.cc  config.hh  config_test.cc  signal.cc  signal.h  signal.hh  utils.cc  utils.hh
src/core/: CMakeLists.txt  adsr.cc  adsr.hh  audio_buffer.cc  audio_output.cc  audio_output.hh  audio_recorder.cc  audio_recorder.hh  common.hh  controls.cc  controls.hh  dsp.hh  engine.cc  engine.hh  fast_random.cc  fx.hh  fx_chorus.cc  fx_chorus.hh  fx_reverb.cc  fx_reverb.hh  fx_stack.cc  fx_stack.hh  http.cc  http.hh  http_stream.cc  http_stream.hh  lfo.cc  lfo.hh  midi_event.hh  midi_ext.cc  midi_ext.hh  midi_stack.cc  midi_stack.hh  neon.cc  parameter.cc  parameter.hh  portaudio.cc  portaudio.hh  sample.cc  sample_manager.cc  (+15 more)
src/core/dsp/: adsr.cc  adsr.hh  audio_buffer.cc  audio_buffer.hh  audio_output.cc  audio_output.hh  band_pass_filter.cc  band_pass_filter.hh  biquad_filter.cc  biquad_filter.hh  chorus.cc  chorus.hh  comb_filter.cc  comb_filter.hh  controls.cc  controls.hh  delay.cc  delay.hh  delayed_apf.cc  delayed_apf.hh  dsp.hh  early_reverb.cc  early_reverb.hh  engine.cc  engine.hh  fx.cc  fx.hh  fx_chorus.cc  fx_chorus.hh  fx_reverb.cc  fx_reverb.hh  fx_stack.cc  fx_stack.hh  high_pass_filter.cc  high_pass_filter.hh  high_shelving_filter.cc  high_shelving_filter.hh  http.cc  http.hh  http_stream.cc  (+38 more)
src/core/engine/: adsr.cc  adsr.hh  audio_buffer.cc  audio_buffer.hh  audio_output.cc  audio_output.hh  controls.cc  controls.hh  dsp.hh  engine.cc  engine.hh  fx.hh  fx_chorus.cc  fx_chorus.hh  fx_reverb.cc  fx_reverb.hh  fx_stack.cc  fx_stack.hh  http.cc  http.hh  http_stream.cc  http_stream.hh  lfo.cc  lfo.hh  midi_ext.cc  midi_ext.hh  midi_stack.cc  midi_stack.hh  sample.cc  sample.hh  sample_manager.cc  sample_manager.hh  sample_pack.cc  sample_pack.hh  sampler.cc  sampler.hh  tools.cc  tools.hh  track.cc  track.hh  (+2 more)
src/core/fx/: fx.hh  fx_chorus.cc  fx_chorus.hh  fx_echo.cc  fx_echo.hh  fx_hpf.cc  fx_hpf.hh  fx_lpf.cc  fx_lpf.hh  fx_reverb.cc  fx_reverb.hh  fx_stack.cc  fx_stack.hh
src/core/inst/: inst.hh  instrument.hh  midi_ext.cc  midi_ext.hh  sampler.cc  sampler.hh
src/core/rt/: bindings.cc  bindings.hh  engine.cc  engine.hh  engine.py  init.cc.in  init.hh  notifier.cc  runtime.cc  (+2 more)
src/matin/: CMakeLists.txt  controller_watcher.cc  controller_watcher.hh  file_watcher.cc  file_watcher.hh  file_watcher_test.cc  matin.cc  matin.hh  matin_test.cc  subscriber.cc  subscriber.hh  utils.cc  utils.hh
src/midi/: CMakeLists.txt  bindings.cc  bindings.hh  engine.cc  engine.hh  engine.py  init.cc.in  init.hh  midi.cc  midi.hh  midi_test.cc  notifier.cc  notifier.hh  soir_client.cc  soir_client.hh
src/proto/: CMakeLists.txt  live.proto  neon.proto  soir.proto
src/soir/: CMakeLists.txt  adsr.cc  adsr.hh  audio_buffer.cc  audio_buffer.hh  common.hh  engine.cc  engine.hh  http.cc  http.hh  http_stream.cc  http_stream.hh  mono_sampler.cc  mono_sampler.hh  soir.cc  soir.hh  soir_test.cc  track.cc  track.hh  vorbis_encoder.cc  vorbis_encoder.hh
src/utils/: CMakeLists.txt  config.cc  config.hh  misc.cc  misc.hh  signal.cc  signal.hh
(+543 files in other folders)
