[tool.poetry]
name = "soir"
version = "0.1.0"
description = "Live Coding Environment"
authors = ["s. rannou <mxs@sbrk.org>"]
license = "MIT"
readme = "README.md"
packages = [
         { from  = "src/core/rt/py", include = "soir" },
]

[tool.poetry.dependencies]
python = "3.11.11"
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.21"
mkdocs-autorefs = "^1.0.1"
typer = "^0.12.3"
pyyaml = "^6.0.2"
regex = "^2024.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
