[build-system]
requires = ["setuptools>=75.0.0", "pybind11>=3.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "Soir"
version = "1.0.0"
description = "Live Coding Environment for Music Creation"
requires-python = "==3.14.0"
dependencies = [
    "typer>=0.19.2",
    "flask>=3.1.2",
    "pygments>=2.19.2",
    "pdoc>=15.0.4",
    "markdown>=3.9",
    "markdown-it-py>=4.0.0",
    "types-markdown>=3.9.0.20250906",
    "setuptools>=80.9.0",
    "pydantic>=2.12.0",
    "watchdog>=6.0.0",
    "docstring-parser>=0.17.0",
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.packages.find]
where = ["py"]
include = ["soir*"]

[tool.setuptools.package-data]
"soir.www" = [
    "content/*.md",
    "static/**/*",
    "templates/*.html",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-flask>=1.3.0",
    "black>=25.9.0",
    "ruff>=0.13.3",
    "mypy>=1.18.2",
    "build>=1.3.0",
    "soundfile>=0.13.1",
]

[project.scripts]
soir = "soir.app:main"

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["playground"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "soir._bindings"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "soir._bindings.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["py/tests"]
python_files = ["test_*.py"]
