[project]
name = "soir"
version = "1.0.0"
description = "Python Sings Alive"
authors = [
    { name = "s. rannou", email = "mxs@sbrk.org" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings>=0.29.1",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "rich>=14.0.0",
    "textual>=3.2.0",
    "typer>=0.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
